--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1 class="fw-bold">En Linea 2.0</h1>   
@@ -24,7 +25,10 @@
                 <img src="images/iconWpp.png" alt="WhatsApp" >
             </a>
         </div>
+
+        
     </header>
+
 
 
     <div class="fondo"> 
@@ -39,7 +43,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Aros</h5>
                                     <p class="card-text">Aros plateados</p>
-                                    <p class="footer"> Oferta </p>                        
+                                    <button type="button">Agregar al carrito</button>                       
                                 </div>
                             </div>
                         </div>                    
@@ -52,7 +56,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Aros</h5>
                                     <p class="card-text">Aros plateados</p>
-                                    <p class="footer"> Oferta </p>                        
+                                    <button type="button">Agregar al carrito</button>                    
                                 </div>
                             </div>
                         </div>                    
@@ -60,6 +64,7 @@
                 </div>
             </div>
  
+
 
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -75,3 +80,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
+
